# discord-melanie

./: README.md  alive.py  main.py  pyproject.toml  requirements.txt
cogs/: action.py  aos.py  cmnd.py  conv.py  devonly.py  game.py  help.py  image.py  level.py  misc.py  quote.py  setting.py  snipe.py  start.py  talk.py  trans.py
cogs/func/: timeedit.py  translate.py  utils.py
cogs/func/converter/: __init__.py  emo.py  members.py  person.py
