[tool.poetry]
name = "ihcmus-alpha"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^2.0.0"
flask = "^1.1.2"
googletrans = "^3.1.0a0"
translate = "^3.5.0"
amg = "^1.0.7"
ansicolors = "^1.1.8"
pytz = "^2021.1"
python-dotenv = "^0.15.0"
unidecode = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
